--- a/src/components/MainEditor.scss
+++ b/src/components/MainEditor.scss
@@ -2,20 +2,36 @@
 
 .main-editor {
   width: 100%;
-  .editor-table {
-    width: 100%;
-    border: 0;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  overflow-x: hidden;
+  .container {
+    padding: 1rem;
+    width: 90%;
+    background:  #FFF;
+    border: 1px solid #E5E5E5;
     margin: 0 auto;
+  }
+  .editor-table {
+    border: 0;
+    margin: 1rem auto;
     border-spacing: 0;
-    font-size: 1rem;
+    min-height: 100vh;
     .table-headers {
       display: flex;
       padding: 1rem;
-      background-color: $primary-background-light;
+      font-weight: 500;
+      font-size: 0.8rem;
+      border-bottom: 1px solid #555;
     }
     .header {
       padding: 0 1rem;
       text-align: left;
+      font-weight: bold;
     }
     .header-key, .table-key {
       width: 20%;
@@ -34,7 +50,6 @@
 
     .table-key {
       font-size: 0.8rem;
-      color: $primary-background-light;
       .prefix {
         font-size: 0.6rem;
       }
@@ -46,9 +61,7 @@
       align-items: center;
       font-size: 0.8rem;
       color: #000;
-      &.odd {
-        background-color: $primary-background-lighter;
-      }
+      border-bottom: 1px solid #CCC;
     }
 
     tr {
