--- a/src/App.scss
+++ b/src/App.scss
@@ -8,18 +8,25 @@ html, body {
   font-size: 18px;
   width: 100vw;
   height: 100vh;
-  background: $primary-background;
+  background: $background-body;
   font-family: Arial, Helvetica, sans-serif;
   color: $primary;
 }
 
 .app {
   display: flex;
-  flex-direction: row;
-  width: 100vw;
-  height: 100vh;
+  flex-direction: column;
+  min-width: 100vw;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 input {
   width: 300px;
+}
+
+.top-header {
+  display: flex;
+  justify-content: space-between;
+  background-color: $background;
 }
