--- a/src/components/VisualInput.scss
+++ b/src/components/VisualInput.scss
@@ -2,11 +2,13 @@
 
 .visual-input {
   width: 100%;
-  border: 1px solid $primary-background-light-1;
-  padding: 5px;
+  margin: 5px 0;
+  padding: 5px 7px;
   outline: 0;
-  background: rgba(255,255,255,0.5);
+  border: 1px solid #AAA;
+  border-radius: 6px;
+  cursor: pointer;
   &.selected, &:hover, &:focus {
-    border: 1px solid $primary-selected;
+    border: 1px solid #555;
   }
 }
