--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,9 @@ html, body {
   width: 100vw;
   height: 100vh;
   background: $background-body;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
+  font-weight: 300;
+  line-height: 20px;
   color: $primary;
 }
 
