--- a/src/components/MainEditor.scss
+++ b/src/components/MainEditor.scss
@@ -2,25 +2,27 @@
 
 .main-editor {
   width: 100%;
-  min-height: 100vh;
+  height: calc(100vh - 3rem);
+  overflow: hidden;
   padding: 0;
   margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   overflow-x: hidden;
+  background:  #FFF;
   .container {
     padding: 1rem;
     width: 90%;
-    background:  #FFF;
-    border: 1px solid #E5E5E5;
+    height: 90%;
     margin: 0 auto;
   }
   .editor-table {
     border: 0;
-    margin: 1rem auto;
+    padding: 2rem auto;
     border-spacing: 0;
-    min-height: 100vh;
+    height: 100%;
+    
     .table-headers {
       display: flex;
       padding: 1rem;
@@ -42,6 +44,11 @@
 
     .header-value, .table-value {
       width: 30%;
+    }
+
+    .table-body {
+      overflow-y: scroll;
+      max-height: 100%;
     }
 
     .table-value {
