--- a/src/components/TopHeader.scss
+++ b/src/components/TopHeader.scss
@@ -1,13 +1,15 @@
 @import '../styles/colors.scss';
 
 .top-header {
+  width: 100%;
+  margin: 0;
+  padding: 0 1rem;
   height: 3rem;
   display: flex;
   justify-content: space-between;
   background-color: $background;
   border-bottom: 1px solid #CCC;
   .title {
-    padding: 0 1rem;
     width: 150px;
     h1 {
       height: 3rem;
