--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import 'styles/fonts/lato.scss';
 @import 'styles/colors.scss';
 @import 'styles/buttons.scss';
 
@@ -10,7 +11,7 @@ html, body {
   width: 100vw;
   height: 100vh;
   background: $background-body;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato',Arial, sans-serif;
   font-weight: 300;
   line-height: 20px;
   color: $primary;
