WIP: Project languages.

--- a/src/components/MainEditor.scss
+++ b/src/components/MainEditor.scss
@@ -37,6 +37,7 @@
     }
     .header-key, .table-key {
       width: 20%;
+      line-height: 2rem;
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 300px;
