--- a/src/components/MainEditor.scss
+++ b/src/components/MainEditor.scss
@@ -49,6 +49,7 @@
 
     .table-body {
       overflow-y: scroll;
+      height: 100%;
       max-height: 100%;
     }
 
@@ -66,7 +67,7 @@
       width: 100%;
       display: flex;
       padding: 0.5rem;
-      align-items: center;
+      align-items: flex-start;
       font-size: 0.8rem;
       color: #000;
       border-bottom: 1px solid #CCC;
